fix grid gap styling issue

--- a/this.buffer/watch-react/projects/10-using-refs-for-dom-access/pics/src/components/ImageList.css
+++ b/this.buffer/watch-react/projects/10-using-refs-for-dom-access/pics/src/components/ImageList.css
@@ -5,6 +5,11 @@
   grid-auto-rows: 10px;
 }
 
+.image-list > div {
+  overflow: hidden;
+  margin-bottom: 10px;
+}
+
 .image-list img {
-  width: 250px;
+  width: 100%;
 }
